--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": " nodemon backend/app"
+    "server": "nodemon backend/server"
   },
   "eslintConfig": {
     "extends": [
