--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^14.2.0",
     "express": "^4.17.2",
+    "express-validator": "^6.14.0",
     "framer-motion": "^5.6.0",
     "install": "^0.13.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
