--- a/package.json
+++ b/package.json
@@ -21,13 +21,18 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.7",
     "multer": "^1.4.4",
+    "query-string": "^7.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-emoji": "^0.5.0",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
+    "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-scroll-to-bottom": "^4.2.0",
     "redux": "^4.1.2",
+    "socket.io-client": "^4.4.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
