--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.1.3",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
@@ -43,7 +44,6 @@
     "gacp": "git add . && git commit -m updated && git push",
     "server": " nodemon backend/server",
     "chat": "nodemon chatapp/index"
-
   },
   "eslintConfig": {
     "extends": [
