--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^6.14.0",
     "framer-motion": "^5.6.0",
     "install": "^0.13.0",
+    "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.7",
     "multer": "^1.4.4",
