--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "gacp": "git add . && git commit -m updated && git push",
-    "server": " nodemon backend/server",
+    "server": " nodemon backend/app.js",
     "chat": "nodemon chatapp/index",
     "start": "node backend/app.js"
   },
